# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt  README.md
src/: Day1.cpp  Day1.hpp  Day2.cpp  Day2.hpp  Day3.cpp  Day3.hpp  Day4.cpp  Day4.hpp  Day5.cpp  Day5.hpp  Day6.cpp  Day6.hpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
